samples/_failures_safe/1761480580_8e61ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3bf9830.c: In function ‘main’:
./samples/SAFE/__tmp_a3bf9830.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Enter node index: ");
      |         ^~~~~~
./samples/SAFE/__tmp_a3bf9830.c:158:9: error: expected declaration or statement at end of input
